--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>success_polly_speech</name>
+  <name>tbd_polly_speech</name>
   <version>0.0.0</version>
-  <description>The success_polly_speech package</description>
+  <description>The tbd_polly_speech package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/success_polly_speech</url> -->
+  <!-- <url type="website">http://wiki.ros.org/tbd_polly_speech</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
