--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,12 +46,13 @@ jobs:
           rosdep install -i --from-paths ros_ws/src
       - name: Install Python3 Compoents
         run: |
+          apt-get install python3-venv
           python3 -m venv venv
           source venv/bin/activate
           pip install empy rospkg defusedxml
       - name: Install Catkin Tools
         run: |
-          apt install python-catkin-tools
+          apt-get install python-catkin-tools
       - name: Catkin Build
         run: |
           source /opt/ros/${{matrix.ros_distributions}}/setup.bash
