split test and result

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,6 +62,9 @@ jobs:
           cd ros_ws
           source devel/setup.bash
           catkin run_tests -DPYTHON_VERSION=3
+      - name: Check Catkin Result
+        run: |
+          cd ros_ws
           catkin_test_results
 
       
