--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,22 +47,19 @@ jobs:
           python3 -m venv venv
           source venv/bin/activate
           pip install empy rospkg defusedxml
-      - name: Install Catkin Tools
-        run: |
-          sudo apt-get install python-catkin-tools
       - name: Catkin Build
         run: |
           source /opt/ros/${{matrix.ros_distributions}}/setup.bash
           source venv/bin/activate
           cd ros_ws
-          catkin build -DPYTHON_VERSION=3
+          catkin_make -DPYTHON_VERSION=3
       - name: Catkin Test
         run: |
           source venv/bin/activate
           cd ros_ws
           source devel/setup.bash
           cd src/tbd_polly_speech
-          catkin run_tests -DPYTHON_VERSION=3 --this
+          catkin_make run_tests -DPYTHON_VERSION=3 --this
       - name: Check Catkin Result
         run: |
           cd ros_ws
