--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,14 +17,14 @@ jobs:
     strategy:
       matrix:
         ros_distributions: 
-          - melodic
+          - noetic
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Setup ROS
-        uses: ros-tooling/setup-ros@0.0.20
+        uses: ros-tooling/setup-ros@0.1.1
         with: 
           required-ros-distributions: ${{ matrix.ros_distributions }}
       - name: Create Workspace
@@ -41,24 +41,16 @@ jobs:
           source /opt/ros/${{matrix.ros_distributions}}/setup.bash
           rosdep update
           rosdep install -i --from-paths ros_ws/src
-      - name: Install Python3 Compoents
-        run: |
-          sudo apt-get install python3-venv
-          python3 -m venv venv
-          source venv/bin/activate
-          pip install empy rospkg defusedxml
       - name: Catkin Build
         run: |
           source /opt/ros/${{matrix.ros_distributions}}/setup.bash
-          source venv/bin/activate
           cd ros_ws
-          catkin_make -DPYTHON_VERSION=3
+          catkin_make 
       - name: Catkin Test
         run: |
-          source venv/bin/activate
           cd ros_ws
           source devel/setup.bash
-          catkin_make run_tests -DPYTHON_VERSION=3
+          catkin_make run_tests 
       - name: Check Catkin Result
         run: |
           cd ros_ws
