--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>tbd_polly_speech</name>
-  <version>1.2.0</version>
+  <version>1.2.1</version>
   <description>The tbd_polly_speech package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
@@ -42,6 +42,8 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <depend>sound_play</depend>
+  <depend>ros_pytest</depend>
+  <depend>tbd_audio_common</depend>
   <build_depend>actionlib</build_depend>
   <build_depend>audio_common_msgs</build_depend>
   <build_depend>roscpp</build_depend>
