--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,7 @@ jobs:
           source /opt/ros/${{matrix.ros_distributions}}/setup.bash
           rosdep update
           rosdep install -i --from-paths ros_ws/src
+          pip install boto3
       - name: Catkin Build
         run: |
           source /opt/ros/${{matrix.ros_distributions}}/setup.bash
